--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.0.1",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
