--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^9.0.0",
     "redux": "^4.1.2",
